--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-hello
+<html>
+  <head>
+    <meta http-equiv="refresh" content="0; url=https://camellia.market" />
+  </head>
+
+  <body>
+    <p><a href="https://camellia.market"></a></p>
+  </body>
+</html>
