--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url=https://santino.market" />
+    <meta http-equiv="refresh" content="0; url=https://camellia.market" />
   </head>
 
   <body>
-    <p><a href="https://santino.market"></a></p>
+    <p><a href="https://camellia.market"></a></p>
   </body>
 </html>
