--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ display: none;
       ОГРНИП: 319237500013728<br>
       143409, МО, г. Красногорск, (7км от МКАД)<br>
       ул. Успенская, д. 4А, оф. 324В БЦ ПАНОРАМА<br>
-      hello@camelliamarket.ru<br>
+      <!-- hello@camelliamarket.ru<br> -->
       +7(925)714-16-12<br><br>
         
       Режим работы магазина:<br>
