--- a/index.html
+++ b/index.html
@@ -144,6 +144,14 @@ display: none;
   <footer>
     © Интеренет-Магазин «camelliamarket.ru», 2019-2022
   </footer>
+    <script type="text/javascript" src="https://vk.com/js/api/openapi.js?169"></script>
+
+<!-- VK Widget -->
+<div id="vk_community_messages"></div>
+<script type="text/javascript">
+VK.Widgets.CommunityMessages("vk_community_messages", 127607773, {expanded: "1",tooltipButtonText: "Есть вопрос?"});
+</script>
+    
   <script src="https://kit.fontawesome.com/10cc7963f2.js" crossorigin="anonymous"></script>
 
 </body>
