--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@ display: none;
       ОГРНИП: 319237500013728<br>
       143409, МО, г. Красногорск, (7км от МКАД)<br>
       ул. Успенская, д. 4А, оф. 324В БЦ ПАНОРАМА<br>
-      <!-- hello@camelliamarket.ru<br> -->
       +7(925)714-16-12<br><br>
+      camelliamarket@yandex.ru
         
       Режим работы магазина:<br>
       Пн-Пт с 09:00-18:00 (ответы на вопросы, прием и отправление заказов).<br>
